[project]
name = "db_pal"
version = "0.1.0"
description = "Your friendly database companion - A powerful tool that uses LLM to help with database operations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "asyncio>=3.4.3",
    "inquirerpy>=0.3.4",
    "openai>=1.12.0",
    "anthropic>=0.8.1",
    "google-generativeai>=0.3.2",
    "mistralai>=0.0.12",
    "groq>=0.4.2",
    "together>=0.2.5",
    "cohere>=4.47",
    "ollama>=0.1.6",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "pymongo>=4.6.1",
    "sqlalchemy>=2.0.27",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.6.0",
    "tqdm>=4.66.2",
    "colorama>=0.4.6",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.3",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.1",
    "typing-extensions>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.1",
    "pre-commit>=3.6.0",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "langchain-ollama>=0.3.2",
    "langchain>=0.3.21",
    "langchain-cohere>= 0.3.4",
    "langchain-community>=0.3.13",
    "langchain-core>= 0.3.59",
    "langchain-experimental>= 0.3.4",
    "langchain-google-genai>=2.1.4",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-openai>=0.3.16",
    "langchain-text-splitters>=0.3.8",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
dbpal = "db_agent.__main__:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.setuptools]
packages = ["db_agent", "db_agent.config", "db_agent.llm", "db_agent.agents", "db_agent.utils"]

